# CPL

./: git用过的指令.txt
0-/: hello.c
1-/: equation.c  gas.c  julian.c  pi.c  sensor.c  test.cpp
10-function_points/: b1.c  bsearch.c  c1.cpp  chenhan.c  fifa.c  function_points.c  polynlist.c  split.c
12-link/: CMakeLists.txt  Cmake使用教程.md  josephus.c
12-link/ll/: ll.c  ll.h
2/: 2.c  blackhole.c  converter-1.c  factorial-1.c  standup.c  triangle.c
3/: a1.in  b-1.c  b-2.c  bubble.c  flip.c  josephus.c  palin.c  super-cal.c
4/: behaviors.c  bit.c  guess.c  magic-square.c  match.c  matrix.c  mines-1.c  point.c  sudoku.c
5-data type/: absolute-prime.c  converter-2.c  data.c  nxt.c  pair.c  radix.c  sum.c
6-/: brackets.c  buddy.c  counting.c  mines-2.c  tempCodeRunnerFile.c  whac-a-mole.c  whac-a-mole2.c  wine.c  withoutstack.c
7-points/: bigtitle.c  interpreter.c  malloc.c  pife.c  point.c  string_point.c  substr.c
8-string-point/: prase.c  strs_cat.c  strs_interleaf.c  tokenizer.c
9-doublepoints/: doublepoints.c  doublepoints2.c  test.c
C Through STD/: T2.c  T3 选手.c  T3.c  t2zhujiao.c  题解oier T2.md  题解oier T3.md
OtherProject/: buddy.c  cycle.c  keyboard.c
csp2024/: T1-S.cpp  sticks.c
exam-2023/: Bye.c  fake.c  gobang.c  lineup.c  reverse.c  tempCodeRunnerFile.c  tic.c
对拍/: A.cpp  B.cpp  baoli.txt  data.cpp  duipai.cpp  in.txt  std.txt
计算系统基础/: 2.c  4.c  5.c
